--- a/Quantum.html
+++ b/Quantum.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quantum Chess</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/ui.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="ui.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -41,9 +41,11 @@
         </div>
     </div>
 
-    <script src="js/pieces.js"></script>
-    <script src="js/board.js"></script>
-    <script src="js/game.js"></script>
-    <script src="js/main.js"></script>
+    <script src="pieces.js"></script>
+    <script src="board.js"></script>
+    <script src="game.js"></script>
+    <script src="main.js"></script>
+     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </body>
 </html>
